# invertase

./: .gitignore  DECISIONS.md  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
User Tests/Json/Round 1/: lep.json  reddit.json  stackoverflow.json  theregister.json
User Tests/Json/Round 2/: bbc.json  lep.json  theregister.json
User Tests/Text/Round 1/: bbc.txt  lep.txt  reddit.txt  stackoverflow.txt  theregister.txt
User Tests/Text/Round 2/: lep.txt  theregister.txt
skills/: genkitx-readability-skill.md
src/genkitx_readability/: __init__.py  invertase.code-workspace  plugin.py  schema.py  utils.py
src/genkitx_readability.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_extract.py  test_filters.py  test_filters_i18n.py  test_filters_more.py  test_plugin_output_file.py
