[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genkitx-readability"
version = "0.1.0"
description = "Genkit plugin to extract clean, structured main content from web URLs for LLM consumption"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Generated" } ]

dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "trafilatura>=1.6",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.entry-points]

[project.entry-points."genkit.plugins"]
genkitx-readability = "genkitx_readability.plugin:register"
